--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -57,3 +57,9 @@ p {
     margin-bottom: 0;
     @include type-M;
 }
+
+a {
+    color: $black;
+    text-decoration: none;
+    border-bottom: 1px dotted $black;
+}
